--- a/project3/package.json
+++ b/project3/package.json
@@ -17,7 +17,8 @@
     "jquery": "^3.3.1",
     "swiper": "^4.3.3",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
